feat(design): compile and render a design locally with --local (#561)